# webpacker-rs

./: Cargo.toml  README.md
src/: asset_path.rs  dependency.rs  gotham.rs  lib.rs
