[package]
name          = "webpacker"
version       = "0.3.0"
authors       = ["Daniel P. Clark <6ftdan@gmail.com>"]
description   = "A Rust wrapper for using Webpacker to manage assets."
repository    = "https://github.com/danielpclark/webpacker-rs"
keywords      = ["web", "assets"]
readme        = "README.md"
edition       = "2018"
license       = "LGPL-3.0"

[dependencies]
im            = "~12.2.0"
