[package]
name          = "webpacker"
version       = "0.3.4"
authors       = ["Daniel P. Clark <6ftdan@gmail.com>"]
description   = "A Rust wrapper for using Webpacker to manage assets."
repository    = "https://github.com/danielpclark/webpacker-rs"
keywords      = ["web", "assets"]
readme        = "README.md"
license       = "LGPL-3.0"

[dependencies]
im            = "~15.0.0"
